--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Mynerve&family=Tilt+Warp&display=swap');
+body
+{
+    background: url("../images/pattern.png");
+}
 #polo
 {
     height: 600px;
