--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ body
     color: white;
     text-align: center;
     font-family: Tilt Warp;
-    font-size: large;
+    font-size: 1000%;
 }
 
 .keret
